syntax = "proto3";

import "messages.proto";
import "google/protobuf/empty.proto";

package Armorial.Actuator;

service ActuatorService {
	rpc SetControls(stream ControlPacket) returns (google.protobuf.Empty);
	rpc GetControls(google.protobuf.Empty) returns (stream ControlPacket);
	rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
	rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse);
}
